# vdi-cpp-wrapper

./: .clinerules  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md
benchmarks/: py_vdi_client.py
benchmarks/python/: py_vdi_client.py  run_py_benchmark.bat  run_py_benchmark.py
benchmarks/results/: results.md
docs/: benchmark-methodology.md  design-decisions.md  glossary.md  operational-behavior.md  runtime-analysis.md  vdi-flow.md
include/: backup_engine.h  backup_request.h  backup_session.h  buffer_pool.h  chunk_timing.h  com_runtime.h  environment.h  error_utils.h  fault_injector.h  file_sink.h  logging.h  metrics.h  sink.h  sqlvdi.h  sqlvdi_guids.h  timer.h  vdi_client.h  version.h
scripts/: README.md  backup.sql  create_testdb.sql  run_cpp_benchmark.ps1  run_cpp_filesink.ps1  run_cpp_nullsink.ps1  run_python_benchmark.ps1  run_python_nullsink.ps1  run_repeatability_check.ps1  test_scripts.ps1  wait_for_wrapper.ps1
src/: backup_engine.cpp  backup_session.cpp  buffer_pool.cpp  com_runtime.cpp  environment.cpp  error_utils.cpp  fault_injector.cpp  file_sink.cpp  main.cpp  metrics.cpp  sink.cpp  sqlvdi_guids.cpp  vdi_client.cpp  vdi_protocol.cpp  vdi_protocol.h
